--- a/Parallax Tutorial Starter Files/Parallax Website Starter Files/style.css
+++ b/Parallax Tutorial Starter Files/Parallax Website Starter Files/style.css
@@ -21,8 +21,7 @@ h1{
     padding: 3% 0;
 }
 h3{
-    font-family: 'Nobile',
-    sans-serif;
+    font-family: 'Nobile',sans-serif;
     text-align:center;
     font-size: 175%;
     color:#4A4444;
@@ -51,10 +50,10 @@ img{
     min-width:100%;
     margin: 0 auto;
 }
-.clider .bx-wrapper .bx-controls-direction a {
+.slider .bx-wrapper .bx-controls-direction a {
     outline: 0 none;
     position: absolute;
-    text-indent: -99999px;
+    text-indent: -9999px;
     top: 40px;
     height:71px;
     width: 40px;    
@@ -67,27 +66,111 @@ img{
 .slider .bx-wrappper .bx-prev{
     background:#000 url("img/left-arrow-white.png") no-repeat 8px 13px;
     left: 0px;
-    opacity: 0.7;
+    opacity: 0.3;
 }
 .slider .bx-wrapper .bx-prev:hover {
-    opacity:0.7;
+    opacity:0.6;
 }
-.slider ,bx-wrapper .bx-next{
-    background: #000 url("img/left-arrow-white.png")no-repeat 10px 12px;
-    right: opx;
-    opacity:0.7;
+.slider bx-wrapper .bx-next{
+    background: #000 url("img/right-arrow-white.png")no-repeat 10px 12px;
+    right: 0px;
+    opacity:0.3;
 }
 .slider bs-wrapper .bx-next:hover{
-    opacity: 0.7;
+    opacity: 0.3;
 }
 .one-half{
     width:44%;
-    float:left;margin:2% 0 3% 4%;
-    text-align:center
+    float:left;
+    margin:2% 0 3% 4%;
+    text-align:center;
 }
 .one-third{
     width:20%;
     float:left;
     margin:2% 0 3% 4%;
-    text-align:center;
+}
+.left-col{
+    width:60%;
+    float:left;
+    margin: 4% 0 4% 4%;
+}
+.sidebar{
+  width:26%;
+  float:right;
+  margin:4% 4%;
+  
+
+}
+.sidebar img{
+    opacity:0.8;
+}
+.clearfix {
+    clear: both;
+}
+
+/* .parallax-1{
+     background:url("http://www.perlabeachvilla.com/images/zakynthos-luxury-beach-villas-01.jpg")repeat fixed 100%;
+
+     text-align:center;
+
+} */
+
+.parallax-inner{
+
+    padding-bottom: 350px;
+}
+
+.parallax-2{
+    background:url("http://www.perlabeachvilla.com/images/zakynthos-luxury-beach-villas-01.jpg")repeat fixed 100%;
+
+     text-align:center;
+}
+.parallax-inner h3, .parallax-inner p {
+    color: #F1F1F1;
+
+}
+
+footer{
+    background:#262E37;
+    opacity: 0.9;
+    width:100%;
+    margin-top: 5%;
+    padding:1% 0;
+    overflow:auto;
+}
+
+footer p {
+    color:#fff;
+}
+
+@media screen and(max-width:768px){
+    .slider .bx-wrapper .bx-controls{
+        display:none;
+
+    }
+    .parallax-inner{
+        width: 100%;
+        margin:4% 0;
+    }
+    .one-half{
+        display:none;
+    }
+    h1{
+        font-size:125%
+    }
+    .left-col{
+        width:100%;
+        margin:0;
+    }
+    .sidebar{
+        width:100%;
+        margin:0;
+    }
+    img{
+        width:100%;
+    }
+    h3{
+        padding-top: 3%;
+    }
 }
